chore: fix editor margin-y to align

--- a/src/less/components/editors.less
+++ b/src/less/components/editors.less
@@ -4,6 +4,16 @@
   animation: fadein 0.15s;
 }
 
+.mainEditor > .mosaic-root {
+  top: 0;
+  bottom: 0;
+
+  .mosaic-tile {
+    margin-top: 0px;
+    margin-bottom: 0px;
+  }
+}
+
 .mosaic-window-toolbar {
   & > div {
     display: flex;
